[gd_scene load_steps=13 format=3 uid="uid://bkhogx7m5mxjl"]

[ext_resource type="Texture2D" uid="uid://bscwb7kektkm5" path="res://Objects/Textures/kristall_1.png" id="1"]
[ext_resource type="Texture2D" uid="uid://bpnv7kawl3fm1" path="res://Objects/Textures/kristall_2.png" id="2"]
[ext_resource type="Texture2D" uid="uid://dg3013m678rhg" path="res://Objects/Textures/statue.png" id="2_hit8n"]
[ext_resource type="Script" uid="uid://c2t02b47lxsug" path="res://Scripts/statue.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://du7ph62oiyuob" path="res://NormalMap/statue_normal.png" id="3_r04k1"]
[ext_resource type="Texture2D" uid="uid://b5nxgfk37j6hm" path="res://Objects/Textures/kristall_3.png" id="5"]
[ext_resource type="Texture2D" uid="uid://dbsgtg7m03d51" path="res://Objects/Textures/statue_red_frame.png" id="5_cuvig"]
[ext_resource type="PackedScene" uid="uid://bbykd4v5sd0lc" path="res://Objects/Scenes/kristall_particle.tscn" id="6"]
[ext_resource type="Texture2D" uid="uid://dj4i5d1rvhr3j" path="res://Objects/Textures/statue_blue_frame.png" id="8_45lcd"]
[ext_resource type="Texture2D" uid="uid://k037t81yejqo" path="res://Objects/Textures/statue_green_frame.png" id="11_346nn"]
[ext_resource type="Texture2D" uid="uid://ffjookgrl3ty" path="res://Objects/Textures/statue_black_frame.png" id="12_iwheo"]

[sub_resource type="CanvasTexture" id="CanvasTexture_mslsq"]
diffuse_texture = ExtResource("2_hit8n")
normal_texture = ExtResource("3_r04k1")

[node name="statue" type="Node2D"]
script = ExtResource("3")

[node name="Statue" type="Sprite2D" parent="."]
texture = SubResource("CanvasTexture_mslsq")

[node name="Kristall1" type="Sprite2D" parent="."]
visible = false
position = Vector2(-35, 31)
texture = ExtResource("1")

[node name="Pixil-frame-0(5)" type="Sprite2D" parent="Kristall1"]
position = Vector2(-3, 2)
texture = ExtResource("5_cuvig")

[node name="KristallParticle" parent="Kristall1" instance=ExtResource("6")]
modulate = Color(1, 0, 0, 1)
position = Vector2(0, 0)

[node name="Kristall2" type="Sprite2D" parent="."]
visible = false
position = Vector2(35, 31)
texture = ExtResource("2")

[node name="Pixil-frame-0(3)" type="Sprite2D" parent="Kristall2"]
position = Vector2(2, 2)
texture = ExtResource("8_45lcd")

[node name="KristallParticle" parent="Kristall2" instance=ExtResource("6")]
modulate = Color(0, 0, 1, 1)
z_index = 2
position = Vector2(0, 0)

[node name="Kristall3" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -4)
texture = ExtResource("5")

[node name="Pixil-frame-0(4)" type="Sprite2D" parent="Kristall3"]
position = Vector2(0, -8.5)
texture = ExtResource("11_346nn")

[node name="KristallParticle" parent="Kristall3" instance=ExtResource("6")]
modulate = Color(0, 1, 0, 1)
z_index = 2
position = Vector2(0, 0)

[node name="KristallAll" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 4.5)
texture = ExtResource("12_iwheo")
